--- a/scss/partials/utilities/_mixins.scss
+++ b/scss/partials/utilities/_mixins.scss
@@ -1,7 +1,9 @@
 // =========================================
 //  Mixins
 // =========================================
-
+@mixin wrapper{
+  
+}
 @mixin heading-name($c,$m) {
   text-transform: uppercase;
   font-size: 2.7em;
