--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,17 +2,49 @@
 //  Partials - Import
 // =========================================
 
-@import 'partials/base/debugger',
-        'partials/utilities/variables',
+@import 'partials/utilities/variables',
         'partials/utilities/mixins',
         'partials/base/reset',
+        'partials/base/base',
         'partials/components/banner',
         'partials/components/social',
         'partials/components/heading-sec',
-        'partials/layout/wrapper',
         'partials/layout/header',
         'partials/layout/contact',
         'partials/layout/about-me',
         'partials/layout/footer',
         'partials/layout/intro',
         'partials/layout/education';
+
+        // =========================================
+        //  Debugger
+        // =========================================
+
+        section {
+         border-style: solid;
+         border-width: 1px;
+         border-color: red;
+        }
+        div {
+            border-style: solid;
+            border-width: 1px;
+            border-color: blue;
+        }
+
+        img {
+            border-style: solid;
+            border-width: 1px;
+            border-color: black;
+        }
+
+        li {
+            border-style: solid;
+            border-width: 1px;
+            border-color: green;
+        }
+
+        a {
+            border-style: solid;
+            border-width: 1px;
+            border-color: pink;
+        }
