--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,17 +42,16 @@ body {
 
 .wrapper {
   display: grid;
-  grid-template-columns: 230px 4% auto 4%;
-  height: 100%; }
+  grid-template-columns: 230px 4% auto 4%; }
   .wrapper-left {
-    grid-column: 1/2;
     display: grid;
     grid-template-rows: repeat(4, auto);
+    grid-column: 1/2;
     background: #ffbf1c; }
   .wrapper-right {
-    grid-column: 3/4;
     display: grid;
-    grid-template-rows: repeat(4, auto); }
+    grid-template-rows: repeat(4, auto);
+    grid-column: 3/4; }
 
 header .profile {
   width: 100%;
@@ -111,9 +110,10 @@ header .avatar {
   100% {
     background-position: 5000%; } }
 .info ul {
-  height: auto;
   display: grid;
-  grid-template-rows: repeat(5, auto); }
+  grid-template-rows: repeat(5, auto);
+  height: auto;
+  overflow: hidden; }
   .info ul li {
     font-weight: bold;
     background-color: orange;
@@ -130,22 +130,26 @@ header .avatar {
       padding-bottom: 5%;
       font-size: 1.05em;
       line-height: .9em;
-      text-align: left; }
+      text-align: left;
+      color: #331a00; }
     .info ul li i {
       width: 20%;
       height: 70%;
       margin-top: 5%;
-      margin-left: 7.5%; }
+      margin-left: 7.5%;
+      color: #331a00; }
 
 .contact-new {
   background-color: #FFF !important;
-  transform: scale(1.05) rotateX(360deg) translate(3%, 0);
-  transition: 0.5s ease-in-out; }
+  transform: scale(1.1) rotateX(360deg) translate(0, 0);
+  transition: 0.5s ease-in-out;
+  overflow: hidden; }
 
 .contact-reverse {
   background-color: orange !important;
   transform: scale(1) rotateX(0deg) translate(0, 0);
-  transition: 0.5s ease-in-out; }
+  transition: 0.5s ease-in-out;
+  overflow: hidden; }
 
 .content-info {
   margin: 7.5% 7.5%;
