--- a/assets/sass/partials/utilities/_mixins.scss
+++ b/assets/sass/partials/utilities/_mixins.scss
@@ -74,7 +74,7 @@
 
 @mixin centred{
   display:grid;
-  justify-self: center;
+  justify-self: start;
   align-self: center;
-  margin:auto;
+  margin-right:auto;
 }
