--- a/assets/sass/partials/components/_social.scss
+++ b/assets/sass/partials/components/_social.scss
@@ -6,14 +6,17 @@
    list-style: none;
    position: relative;
    top: 5%;
-   margin-left: 10%;
+   margin-left: auto;
    padding: 0;
    display: flex;
+   justify-content: space-evenly;
+   width: 40%;
 
       li {
         list-style: none;
         padding: 0;
-        margin-left: 5.5%;
+        margin-left: 4%;
+        flex: 1 1 10%;
 
         /*Changing background color of the Social buttons on hover */
 
@@ -42,8 +45,8 @@
            a {
               color:rgba(38, 38, 38,.85);
               background-color: rgba(255,191,28,.8);
-              width: 112%;
-              height: 112%;
+              width: 100%;
+              height: 100%;
               display:block;
               text-align: center;
               transform: rotate(-20deg) skew(2deg);
@@ -61,10 +64,10 @@
              // Creating the side frames of the Social buttons
 
               &::before{
-                @include social-buttons($top: .2em,$left: -.4em,$bottom: 0,$width: .4em,$height: 100%,$transform: rotate(0deg) skewY(-45deg)) ;
+                @include social-buttons($top: .15em,$left: -.4em,$bottom: 0,$width: .4em,$height: 100%,$transform: rotate(0deg) skewY(-45deg)) ;
                   }
               &::after{
-                @include social-buttons($top: 2.3em,$left: -.1em,$bottom: -.3em,$width: 100%,$height: .4em,$transform: rotate(0deg) skewX(-45deg));
+                @include social-buttons($top: 2.4em,$left: -.1em,$bottom: -.3em,$width: 100%,$height: .4em,$transform: rotate(0deg) skewX(-45deg));
                   }
 
             }
