--- a/assets/sass/partials/layout/_intro.scss
+++ b/assets/sass/partials/layout/_intro.scss
@@ -2,23 +2,23 @@
 
 .introduction {
     display: grid;
-    grid-template-columns: 1.7fr 2fr;
-    grid-template-rows: 1fr 3fr;
+    grid-auto-columns: repeat(2,1fr);
+    grid-template-rows: 1fr 2fr;
 }
 
 .social {
   grid-row: 1;
-  grid-column: span 2;
+  grid-column: span 1;
 }
 
 // Css Styling of the Right Section of the CV - Section Self
 
 .self {
   grid-row: 2;
-  grid-column: span 2;
+  grid-column: span 1;
   @include centred;
 
-    .self-inner {
+    &-inner {
 
        h1 {
          @include heading-name($left-section-background,0);
