--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -259,27 +259,27 @@ footer {
 /* line 3, ../sass/partials/layout/_intro.scss */
 .introduction {
   display: grid;
-  grid-template-columns: 1.7fr 2fr;
-  grid-template-rows: 1fr 3fr;
+  grid-auto-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr 2fr;
 }
 
 /* line 9, ../sass/partials/layout/_intro.scss */
 .social {
   grid-row: 1;
-  grid-column: span 2;
+  grid-column: span 1;
 }
 
 /* line 16, ../sass/partials/layout/_intro.scss */
 .self {
   grid-row: 2;
-  grid-column: span 2;
+  grid-column: span 1;
   display: grid;
   justify-self: start;
   align-self: center;
   margin-right: auto;
 }
 /* line 23, ../sass/partials/layout/_intro.scss */
-.self .self-inner h1 {
+.self-inner h1 {
   text-transform: uppercase;
   font-size: 2.7em;
   font-weight: 500;
@@ -290,7 +290,7 @@ footer {
   margin-left: 0;
 }
 /* line 28, ../sass/partials/layout/_intro.scss */
-.self .self-inner h2 {
+.self-inner h2 {
   text-transform: uppercase;
   font-size: 2.7em;
   font-weight: 500;
@@ -301,14 +301,14 @@ footer {
   margin-left: 5%;
 }
 /* line 32, ../sass/partials/layout/_intro.scss */
-.self .self-inner .name-2 {
+.self-inner .name-2 {
   font-size: 1.2em  !important;
   font-weight: 550  !important;
   line-height: 1.5em !important;
   display: none;
 }
 /* line 38, ../sass/partials/layout/_intro.scss */
-.self .self-inner .name-2 span {
+.self-inner .name-2 span {
   text-decoration: underline !important;
 }
 
