--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -408,12 +408,17 @@ footer {
   color: #FFF;
 }
 
-/* line 4, ../sass/partials/components/_heading-sec.scss */
+/* line 2, ../sass/partials/components/_heading-sec.scss */
+.heading {
+  grid-row: 1;
+  grid-column: span 3;
+}
+/* line 6, ../sass/partials/components/_heading-sec.scss */
 .heading i {
   color: #ffbf1c;
   margin-right: 5%;
 }
-/* line 9, ../sass/partials/components/_heading-sec.scss */
+/* line 11, ../sass/partials/components/_heading-sec.scss */
 .heading h2 {
   text-transform: uppercase;
   font-size: 1.4em;
@@ -422,7 +427,7 @@ footer {
   color: #000;
   line-height: 1.5em;
 }
-/* line 18, ../sass/partials/components/_heading-sec.scss */
+/* line 20, ../sass/partials/components/_heading-sec.scss */
 .heading hr {
   display: block;
   margin: 1% auto 5% auto;
@@ -430,12 +435,12 @@ footer {
   border-width: 1.5px;
   color: #ffbf1c;
 }
-/* line 25, ../sass/partials/components/_heading-sec.scss */
+/* line 27, ../sass/partials/components/_heading-sec.scss */
 .heading .edu {
   display: flex;
 }
 
-/* line 31, ../sass/partials/components/_heading-sec.scss */
+/* line 33, ../sass/partials/components/_heading-sec.scss */
 .opacity-edu {
   opacity: 0;
 }
@@ -530,6 +535,7 @@ footer {
 .education {
   display: grid;
   grid-template-rows: 20% repeat(2, auto);
+  grid-template-columns: 3;
 }
 
 /* line 8, ../sass/partials/layout/_education.scss */
