--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -15,6 +15,7 @@
         'partials/layout/intro',
         'partials/components/social',
         'partials/components/heading-sec',
+        'partials/components/article-component',
         'partials/layout/heading-book',
         'partials/layout/education';
 
