--- a/assets/sass/partials/components/_heading-sec.scss
+++ b/assets/sass/partials/components/_heading-sec.scss
@@ -19,7 +19,7 @@
 
   hr {
       display: block;
-      margin: 1% auto 5% auto;
+      margin: 2% auto 0 auto;
       border-style: solid;
       border-width: 1.5px;
       color: $left-section-background;
