--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -430,7 +430,7 @@ footer {
 /* line 20, ../sass/partials/components/_heading-sec.scss */
 .heading hr {
   display: block;
-  margin: 1% auto 5% auto;
+  margin: 2% auto 0 auto;
   border-style: solid;
   border-width: 1.5px;
   color: #ffbf1c;
@@ -443,6 +443,49 @@ footer {
 /* line 33, ../sass/partials/components/_heading-sec.scss */
 .opacity-edu {
   opacity: 0;
+}
+
+/* line 1, ../sass/partials/components/_article-component.scss */
+.content {
+  display: grid;
+  grid-auto-rows: auto;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 2%;
+}
+/* line 8, ../sass/partials/components/_article-component.scss */
+.content-left {
+  grid-column: span 1;
+  margin: 0;
+}
+/* line 13, ../sass/partials/components/_article-component.scss */
+.content-right {
+  grid-column: span 2;
+  margin: 0;
+}
+/* line 17, ../sass/partials/components/_article-component.scss */
+.content-right h3 {
+  text-transform: uppercase;
+  font-size: 1.15em;
+  font-weight: 500;
+  letter-spacing: .3px;
+  line-height: 1.2em;
+  color: #000;
+  margin: 1.5% 1.5%;
+}
+/* line 27, ../sass/partials/components/_article-component.scss */
+.content-right h4 {
+  font-size: 1em;
+  font-weight: 500;
+  letter-spacing: 0.1 0.5px;
+  line-height: 1.2em;
+  color: #000;
+  margin: 1.5% 1.5%;
+}
+/* line 36, ../sass/partials/components/_article-component.scss */
+.content-right p {
+  margin: 1.5% 1.5%;
+  text-align: justify;
+  line-height: 1.4em !important;
 }
 
 /* line 1, ../sass/partials/layout/_heading-book.scss */
@@ -535,50 +578,45 @@ footer {
 .education {
   display: grid;
   grid-template-rows: 20% repeat(2, auto);
-  grid-template-columns: 3;
+  margin-bottom: 0;
 }
 
-/* line 8, ../sass/partials/layout/_education.scss */
+/* line 9, ../sass/partials/layout/_education.scss */
 .experience {
   display: grid;
-  grid-template-rows: 20% repeat(3, auto);
+  grid-template-rows: 20% repeat(2, auto);
+  margin-bottom: 0;
 }
 
-/* line 12, ../sass/partials/layout/_education.scss */
-.content {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-}
-
-/* line 25, ../sass/style.scss */
+/* line 26, ../sass/style.scss */
 ul, section {
   border-style: solid;
   border-width: 1px;
   border-color: red;
 }
 
-/* line 30, ../sass/style.scss */
+/* line 31, ../sass/style.scss */
 div {
   border-style: solid;
   border-width: 1px;
   border-color: blue;
 }
 
-/* line 36, ../sass/style.scss */
+/* line 37, ../sass/style.scss */
 img {
   border-style: solid;
   border-width: 1px;
   border-color: black;
 }
 
-/* line 42, ../sass/style.scss */
+/* line 43, ../sass/style.scss */
 li {
   border-style: solid;
   border-width: 1px;
   border-color: green;
 }
 
-/* line 48, ../sass/style.scss */
+/* line 49, ../sass/style.scss */
 a {
   border-style: solid;
   border-width: 1px;
