--- a/assets/sass/partials/layout/_education.scss
+++ b/assets/sass/partials/layout/_education.scss
@@ -11,3 +11,7 @@
     grid-template-rows: 20% repeat(3,auto);
     margin-bottom: 0;
 }
+.reference {
+    display: grid;
+    grid-template-columns:repeat(2,1fr);
+    }
