--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -55,7 +55,7 @@ table {
 
 /* line 1, ../sass/partials/base/_base.scss */
 body {
-  width: 60%;
+  width: 55%;
   margin: auto;
 }
 
@@ -67,7 +67,7 @@ body {
 /* line 10, ../sass/partials/base/_base.scss */
 .wrapper-left {
   display: grid;
-  grid-template-rows: repeat(4, auto);
+  grid-template-rows: 1fr auto 2fr auto;
   grid-column: 1/2;
   background: #ffbf1c;
 }
@@ -430,7 +430,7 @@ footer {
 /* line 20, ../sass/partials/components/_heading-sec.scss */
 .heading hr {
   display: block;
-  margin: 2% auto 0 auto;
+  margin: 2% auto 5% auto;
   border-style: solid;
   border-width: 1.5px;
   color: #ffbf1c;
@@ -450,19 +450,24 @@ footer {
   display: grid;
   grid-auto-rows: auto;
   grid-template-columns: repeat(3, 1fr);
-  margin-top: 1%;
+  margin: 0 auto 5% auto;
 }
-/* line 8, ../sass/partials/components/_article-component.scss */
+/* line 7, ../sass/partials/components/_article-component.scss */
+.content-ref {
+  grid-column: span 1;
+  margin: 0;
+}
+/* line 12, ../sass/partials/components/_article-component.scss */
 .content-left {
   grid-column: span 1;
   margin: 0;
 }
-/* line 13, ../sass/partials/components/_article-component.scss */
+/* line 17, ../sass/partials/components/_article-component.scss */
 .content-right {
   grid-column: span 2;
   margin: 0;
 }
-/* line 17, ../sass/partials/components/_article-component.scss */
+/* line 21, ../sass/partials/components/_article-component.scss */
 .content-right h3 {
   font-size: 1.15em;
   font-weight: 500;
@@ -472,7 +477,7 @@ footer {
   margin: 1.5% 1.5%;
   text-transform: uppercase;
 }
-/* line 22, ../sass/partials/components/_article-component.scss */
+/* line 26, ../sass/partials/components/_article-component.scss */
 .content-right h4 {
   font-size: 1em;
   font-weight: 500;
@@ -481,8 +486,27 @@ footer {
   color: #000;
   margin: 1.5% 1.5%;
 }
-/* line 26, ../sass/partials/components/_article-component.scss */
+/* line 30, ../sass/partials/components/_article-component.scss */
 .content-right p {
+  margin: 1.5% 1.5%;
+  text-align: left;
+  line-height: 1.4em !important;
+}
+
+/* line 37, ../sass/partials/components/_article-component.scss */
+.contents {
+  display: grid;
+  grid-auto-rows: auto;
+  grid-template-columns: repeat(2, auto);
+  margin: 0 auto 5% auto;
+}
+/* line 43, ../sass/partials/components/_article-component.scss */
+.contents-ref {
+  grid-column: span 1;
+  margin: 0;
+}
+/* line 47, ../sass/partials/components/_article-component.scss */
+.contents-ref p {
   margin: 1.5% 1.5%;
   text-align: left;
   line-height: 1.4em !important;
@@ -586,6 +610,12 @@ footer {
   display: grid;
   grid-template-rows: 20% repeat(3, auto);
   margin-bottom: 0;
+}
+
+/* line 14, ../sass/partials/layout/_education.scss */
+.reference {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 /* line 26, ../sass/style.scss */
