--- a/assets/sass/partials/utilities/_mixins.scss
+++ b/assets/sass/partials/utilities/_mixins.scss
@@ -2,8 +2,9 @@
 //  Mixins
 // =========================================
 @mixin wrap($grid-trow: null,
-                 $grid-tcol: null){
+                 $grid-tcol: null,$grid-autorows: null){
   display: grid;
+  grid-auto-rows: $grid-autorows;
   grid-template-rows: $grid-trow;
   grid-template-columns: $grid-tcol;
   @content;
